💄 Global - Fix section gap

--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -96,7 +96,7 @@ button {
   flex-direction: column;
   align-items: center;
   margin: auto;
-  gap: 32px;
+  gap: 64px;
   background-color: var(--dark-grey-color);
   border-radius: 8px;
   padding: 32px;
